Add SDL 3 support to all SDL backends
Improvements to both SDL 2 and SDL 3:
- Keyboard is activated and deactivated when focusing text input fields.
- Text input events are only submitted when text input fields are focused.

SDL 3-specific improvements:
- Enables positioning of the input method editor (IME) to the text cursor.

SDL_GL2-specific improvements:
- Use OpenGL directly instead of the SDL renderer, just like the SDL_GL3 renderer.
- GLEW is no longer required, stop linking to it.

By default, CMake will now first look for SDL 3, and only if that is not found, it will look for SDL 2. To override the automatic selection, set `RMLUI_SDL_VERSION_MAJOR` to the desired version (2 or 3). Here, an empty value means default (automatic) behavior.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Install Dependencies
       run: |-
         sudo apt-get update
-        sudo apt-get install cmake ninja-build libsdl2-dev libsdl2-image-dev libfreetype6-dev libharfbuzz-dev libglew-dev liblua5.2-dev libsfml-dev librlottie-dev libglfw3-dev
+        sudo apt-get install cmake ninja-build libsdl2-dev libsdl2-image-dev libfreetype6-dev libharfbuzz-dev liblua5.2-dev libsfml-dev librlottie-dev libglfw3-dev
 
     - name: Configure CMake
       run: >-
@@ -77,7 +77,7 @@ jobs:
       - name: Install Dependencies
         run: |-
           sudo apt-get update
-          sudo apt-get install cmake ninja-build libsdl2-dev libsdl2-image-dev libfreetype6-dev libharfbuzz-dev libglew-dev liblua5.2-dev libglfw3-dev
+          sudo apt-get install cmake ninja-build libsdl2-dev libsdl2-image-dev libfreetype6-dev libharfbuzz-dev liblua5.2-dev libglfw3-dev
 
       - name: Configure CMake
         run: >-
@@ -163,7 +163,7 @@ jobs:
         run: |-
           C:\msys64\usr\bin\bash -lc ("pacman --needed --noconfirm --sync " +
             "mingw-w64-x86_64-gcc mingw-w64-x86_64-cmake mingw-w64-x86_64-freetype mingw-w64-x86_64-lua " +
-            "mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_image mingw-w64-x86_64-glew")
+            "mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_image")
 
       - name: Configure CMake
         run: |-
