CMake: Fix success message when dependency is found

--- a/CMake/RmlUiConfig.cmake.in
+++ b/CMake/RmlUiConfig.cmake.in
@@ -22,8 +22,9 @@ macro(report_dependency_found_or_error friendly_name package_name target_name)
 	if(NOT TARGET ${target_name})
 		report_dependency_not_found(${friendly_name} ${package_name} ${target_name})
 	endif()
-	if(ARGC GREATER "2" AND ARGV2)
-		set(success_message " - ${ARGV2}")
+	set(success_message "")
+	if(${ARGC} GREATER 3)
+		set(success_message " - ${ARGV3}")
 	endif()
 	message(STATUS "Found ${friendly_name} target ${target_name}${success_message}")
 endmacro()
