public data model

--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -25,7 +25,6 @@ add_library(rmlui_core
 	DataExpression.cpp
 	DataExpression.h
 	DataModel.cpp
-	DataModel.h
 	DataModelHandle.cpp
 	DataTypeRegister.cpp
 	DataVariable.cpp
@@ -246,6 +245,7 @@ target_sources(rmlui_core PRIVATE
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/ContextInstancer.h"
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/ConvolutionFilter.h"
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/Core.h"
+	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/DataModel.h"
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/DataModelHandle.h"
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/DataStructHandle.h"
 	"${PROJECT_SOURCE_DIR}/Include/RmlUi/Core/DataTypeRegister.h"
