Fix Emscripten CI build
Emscripten was updated upstream with experimental SDL3 support. Set our CMake configuration to use SDL2 until the support for the next major version is more stable.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -198,7 +198,8 @@ jobs:
         source emsdk-master/emsdk_env.sh
         emcmake cmake -B Build --preset samples -Wdev -Werror=dev -DCMAKE_BUILD_TYPE=Release \
         -DBUILD_SHARED_LIBS=OFF -DRMLUI_WARNINGS_AS_ERRORS=ON \
-        -DCMAKE_MODULE_PATH=$GITHUB_WORKSPACE/CMake/Modules/Emscripten
+        -DCMAKE_MODULE_PATH=$GITHUB_WORKSPACE/CMake/Modules/Emscripten \
+        -DRMLUI_SDL_VERSION_MAJOR=2
 
     - name: Build
       run: |-
