Partial layout updates for isolated layout nodes

--- a/Tests/Source/UnitTests/CMakeLists.txt
+++ b/Tests/Source/UnitTests/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(${TARGET_NAME}
 	Filter.cpp
 	FlexFormatting.cpp
 	Layout.cpp
+	LayoutIsolation.cpp
 	Localization.cpp
 	main.cpp
 	Math.cpp
