--- a/Source/Core/Layout/CMakeLists.txt
+++ b/Source/Core/Layout/CMakeLists.txt
@@ -29,6 +29,8 @@ target_sources(rmlui_core PRIVATE
 	"${CMAKE_CURRENT_SOURCE_DIR}/LayoutDetails.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/LayoutEngine.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/LayoutEngine.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/LayoutNode.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/LayoutNode.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/LayoutPools.cpp"
 	"${CMAKE_CURRENT_SOURCE_DIR}/LayoutPools.h"
 	"${CMAKE_CURRENT_SOURCE_DIR}/LineBox.cpp"
