--- a/Backends/CMakeLists.txt
+++ b/Backends/CMakeLists.txt
@@ -109,6 +109,17 @@ if(UNIX)
 	target_link_libraries(rmlui_backend_SDL_VK INTERFACE ${CMAKE_DL_LIBS})
 endif()
 
+add_library(rmlui_backend_SDL_DX12 INTERFACE)
+target_sources(rmlui_backend_SDL_DX12 INTERFACE
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Platform_SDL.cpp"
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Renderer_DX12.cpp"
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Backend_SDL_DX12.cpp"
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Platform_SDL.h"
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Renderer_DX12.h"
+	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Include_DirectX_12.h"
+)
+target_link_libraries(rmlui_backend_SDL_DX12 INTERFACE rmlui_backend_common_headers SDL::SDL)
+
 add_library(rmlui_backend_SDL_SDLrenderer INTERFACE)
 target_sources(rmlui_backend_SDL_SDLrenderer INTERFACE
 	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Renderer_SDL.cpp"
