--- a/Samples/basic/CMakeLists.txt
+++ b/Samples/basic/CMakeLists.txt
@@ -11,6 +11,7 @@ if(RMLUI_FONT_ENGINE_ENABLED)
 	add_subdirectory("drag")
 	add_subdirectory("effects")
 	add_subdirectory("integration")
+	add_subdirectory("integration_2")
 	add_subdirectory("load_document")
 	add_subdirectory("transform")
 	add_subdirectory("tree_view")
