ADD: CaptureScreen, but GLs crush on laptop and DX12 is strange output image gives need to investigate more;

--- a/Samples/shell/CMakeLists.txt
+++ b/Samples/shell/CMakeLists.txt
@@ -34,3 +34,21 @@ endif()
 if(RMLUI_BACKEND MATCHES "GL3$")
 	target_compile_definitions(rmlui_shell PRIVATE "RMLUI_RENDERER_GL3")
 endif()
+if (RMLUI_BACKEND MATCHES "DX12$")
+	target_compile_definitions(rmlui_shell PRIVATE "RMLUI_RENDERER_DX12")
+endif()
+if (RMLUI_BACKEND MATCHES "DX11$")
+	target_compile_definitions(rmlui_shell PRIVATE "RMLUI_RENDERER_DX11")
+endif()
+if (RMLUI_BACKEND MATCHES "DX10$")
+	target_compile_definitions(rmlui_shell PRIVATE "RMLUI_RENDERER_DX10")
+endif()
+if (RMLUI_BACKEND MATCHES "DX9$")
+	target_compile_definitions(rmlui_shell PRIVATE "RMLUI_RENDERER_DX9")
+endif()
+if (RMLUI_BACKEND MATCHES "MT$")
+	target_compile_definitions(rmlui_shell PRIVATE "RMLUI_RENDERER_METAL")
+endif()
+if (RMLUI_BACKEND MATCHES "VK$")
+	target_compile_definitions(rmlui_shell PRIVATE "RMLUI_RENDERER_VULKAN")
+endif()
