--- a/Backends/CMakeLists.txt
+++ b/Backends/CMakeLists.txt
@@ -11,6 +11,10 @@ target_sources(rmlui_backend_common_headers INTERFACE
 	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Backend.h"
 )
 
+if(RMLUI_BACKEND_SIMULATE_TOUCHES)
+	target_compile_definitions(rmlui_backend_common_headers INTERFACE "RMLUI_BACKEND_SIMULATE_TOUCHES")
+endif()
+
 add_library(rmlui_backend_Win32_GL2 INTERFACE)
 target_sources(rmlui_backend_Win32_GL2 INTERFACE
 	"${CMAKE_CURRENT_LIST_DIR}/RmlUi_Platform_Win32.cpp"
