reverted testing code

--- a/Samples/shell/CMakeLists.txt
+++ b/Samples/shell/CMakeLists.txt
@@ -16,7 +16,7 @@ add_library(rmlui_shell STATIC
 
 set_common_target_options(rmlui_shell)
 
-target_link_libraries(rmlui_shell PRIVATE rmlui_backend_${RMLUI_BACKEND} harfbuzz::harfbuzz)
+target_link_libraries(rmlui_shell PRIVATE rmlui_backend_${RMLUI_BACKEND})
 
 target_include_directories(rmlui_shell PUBLIC "include" "${PROJECT_SOURCE_DIR}/Backends")
 
