Implement cache for box shadows
This particularly helps in situations with many elements of the same size with the same box shadow. Then the box shadow render resources will be reused between elements. This helps with the initial document render time, and can also significantly lower the total texture size permanently.

Co-authored-by: Michael Ragazzon <michael.ragazzon@gmail.com>

--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -4,6 +4,9 @@
 add_library(rmlui_core
 	BaseXMLParser.cpp
 	Box.cpp
+	BoxShadowCache.h
+	BoxShadowCache.cpp
+	BoxShadowHash.h
 	CallbackTexture.cpp
 	Clock.cpp
 	Clock.h
