Add DirectX 12 backends
Co-authored-by: Michael Ragazzon <michael.ragazzon@gmail.com>

--- a/Samples/basic/effects/CMakeLists.txt
+++ b/Samples/basic/effects/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(NOT RMLUI_BACKEND MATCHES "GL3$")
+if(NOT RMLUI_BACKEND MATCHES "(GL3|DX12)$")
 	message(STATUS "Effects sample disabled - only available on GL3 backends")
 	return()
 endif()
