--- a/Samples/shell/CMakeLists.txt
+++ b/Samples/shell/CMakeLists.txt
@@ -34,3 +34,6 @@ endif()
 if(RMLUI_BACKEND MATCHES "GL3$")
 	target_compile_definitions(rmlui_shell PRIVATE "RMLUI_RENDERER_GL3")
 endif()
+if(RMLUI_BACKEND MATCHES "DX12$")
+	target_compile_definitions(rmlui_shell PRIVATE "RMLUI_RENDERER_DX12")
+endif()
